# compblend3

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  GOAL.md  PROGRESS.md  README.md  pyproject.toml
artifacts/c3_diagnosis/: earliest_divergence.csv  position_report.md  summary.json
artifacts/c4_layer0_intra_op/: c4_report.md  intra_op_divergence.csv  summary.json
artifacts/c6_input_eager_precision_deterministic/: diagnose_c6.json
artifacts/c7_padded_shape_position_info/: diagnose_c7.json
docs/context/: current_status.md  project_goal.md  session_resume.md
docs/design/: report_style.md
docs/prompts/: phase_00_prompt.md  step_00_prompt.md  step_01_prompt.md
docs/reports/: overnight_step_03_to_07_summary.md  phase_00_setup_report.html  step_00_determinism_report.md  step_01_fork_equivalence_report.md  (+7 more)
notes/: lmcache_pinning.md
patches/: README.md  lmcache-vllm-cacheblend.md
scripts/: build_loong_manifest.py  check_env.py  compare_results.py  diagnose_input_eager_precision_deterministic.py  diagnose_layer0_intra_op_divergence.py  diagnose_padded_shape_position_info.py  diagnose_prefill_vs_cached_decode_position.py  download_models.py  sanity_forward.py  vast_helper.py  vast_run.sh
setup/: install_local.sh  install_macbook.sh  install_vastai.sh
tasks/: README.md  phase_00_setup.md  step_00_determinism_check.md  step_01_fork_equivalence.md  step_01_layerwise_forward.md  step_02_dynamic_cache.md  step_03_chunked_kv_store.md  step_04_multi_chunk_concat.md  step_05_one_chunk_reuse.md  step_06_n_chunks_reuse_full_recompute.md  step_07_hkvd_oracle.md  step_08_loong_f1_mistral.md
tests/: test_smoke.py
(+36 files in other folders)
