[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compblend"
version = "0.1.0"
description = "Verifiable CacheBlend reimplementation on HuggingFace Transformers, with CompBlend extension"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "TBD" }
authors = [
    { name = "Jungsik Choi" },
]

# 핵심 dependency는 install 스크립트에서 별도 처리 (torch는 cu128 wheel 필요)
# 여기에는 표준 PyPI에서 받을 수 있는 것만 명시
dependencies = [
    # transformers는 Phase 0 task 0.1에서 최종 버전 확정 후 명시
    # "transformers==4.51.3",
    # 아래는 일반적으로 필요한 것들
    "datasets>=2.14",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.2",
]
metrics = [
    "rouge-score>=0.1.2",
    "scikit-learn>=1.3",
]
dev = [
    "ipython>=8.18",
    "jupyter>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "gpu: requires GPU",
    "slow: takes more than 30 seconds",
    "integration: full integration test (model loading required)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line too long (formatter handles it)
